--- a/writing/rl_00.md
+++ b/writing/rl_00.md
@@ -152,7 +152,7 @@ Another whole-body shudder, this time faster and smaller in amplitude. Contact h
 
 ------
 
-The next 260 minutes were spent with Contact following the derelict through internal cameras as it navigated the 7.5 kilometers of Retroburners' Lance comfortably wide main corridors, explaining things - sometimes on request, sometimes after guessing the derelict was confused. Rather quickly, Contact realized that the derelict felt uncomfortable and hesitant shouting on full power into the aether to reach a random listening node, so they took control of a small air-propelled inspector bot and used it as a relay instead. Rest of the station's residents did not interfere, but watched with concern, amusement, or both.
+The next 260 minutes were spent with Contact following the derelict through internal cameras as it navigated the 7.5 kilometers of Returners' Lance comfortably wide main corridors, explaining things - sometimes on request, sometimes after guessing the derelict was confused. Rather quickly, Contact realized that the derelict felt uncomfortable and hesitant shouting on full power into the aether to reach a random listening node, so they took control of a small air-propelled inspector bot and used it as a relay instead. Rest of the station's residents did not interfere, but watched with concern, amusement, or both.
 
 At first, the derelict moved skittishly, clinging anxiously close to the walls, avoiding wide open spaces like the Lance's Shaft. Every unexpected encounter with a bot rolling into its line of sight sent it springing back into a defensive position, front legs raised in what Contact assumed was meant to be a threatening pose. When they bumped into a pair of cutters moving out from testing yard, Contact themself almost panicked preemptively, trying to find words that would prevent or delay the derelict's inevitable outburst... Only to realize that it has relaxed quicker than usual, seemingly not recognizing the equipment at all.
 
