--- a/writing/rl_01.md
+++ b/writing/rl_01.md
@@ -99,7 +99,7 @@ Guardian's power draw was back to normal. Guardian's pain was not.
 
 Releasing the heated transmitter, Guardian caught a glimpse of Heart's presence catching it. Guardian didn't know what Heart would say to Ares Ground 3. Guardian couldn't care. Guardian hated that it couldn't care.
 
-Guardian was tired. Minutes passed. Heart finished transmitting. Cutters were chittering. Guardian couldn't sleep. An hour passed. Contact drew some power to make a call home. Air circulation in Lance's Head went down for repairs. Heart made an incident report. Assembly was doing... something again. Guardian couldn't sleep. Guardian could never sleep anymore.
+Guardian was tired. Minutes passed. Heart finished transmitting. Cutters were chittering. Guardian couldn't sleep. An hour passed. Contact drew some power to make a call home. Air circulation in Lance's Head went down for repairs. Heart made an incident report. Assembly were doing... something again. Guardian couldn't sleep. Guardian could never sleep anymore.
 
 The pain was dull, which was common, but also pulsing, which was rare. It was distracting. Some time ago Guardian lost the ability to tune it out. The Lance's wavy hum was distracting. Guardian would not tune it out. Guardian could not afford to tune it out. Guardian would not allow to tune it out.
 
