one word typo ffs

--- a/writing/rl_02.md
+++ b/writing/rl_02.md
@@ -102,7 +102,7 @@ Moon Selector paused, unsure how to continue. Ideas did not come easily, so inst
 
 "You say that when you think it looks bad," - Moon Selector poked.
 
-"No, I'm serious. This reminds me of something from Personal Files. Hold on," - Library disappeared for a whopping 600 milliseconds, then returned with an entry - "Look."
+"No, I'm serious. This reminds me of something from Personal Items. Hold on," - Library disappeared for a whopping 600 milliseconds, then returned with an entry - "Look."
 
 Moon Selector opened the entry, called "Strandbeests", and sifted through the media.
 
