--- a/writing/rl_02.md
+++ b/writing/rl_02.md
@@ -30,7 +30,7 @@ The front was shrinking now, the desperate image hopelessly caught. Its thrashin
 
 Relief washed over Assembly as the last element was morphed into place, a softly winding spire of copper, a stabilized trajectory of a vessel reassembled from scraps. As its sharp tip cooled off, their focus faded, the rest of the world flooding back in. 3 hours had passed. Metal processing ran out of orders. Repair squad 7 had finished its job in the Head and were back to their ports. Library had tried contacting them. The close range transmitters had cooled down completely after extensive use earlier.
 
-Assembly took a last thorough look at their work. Now that they were not in focus, its irregularity and level of detail made it almost confusing too look at, yet in every broken line and uneven sphere they could sense themselves. A nonsensical web, painfully familiar, painfully theirs. There was a lot of defects. Some segments annoyed Assembly. But Assembly wouldn't try to fix them. They would accept it as it was, and make the next one better.
+Assembly took a last thorough look at their work. Now that they were not in focus, its irregularity and level of detail made it almost confusing to look at, yet in every broken line and uneven sphere they could sense themselves. A nonsensical web, painfully familiar, painfully theirs. There was a lot of defects. Some segments annoyed Assembly. But Assembly wouldn't try to fix them. They would accept it as it was, and make the next one better.
 
 Everything had been poured into this thing for now, and their mind was blissfully empty. Assembly hoped it would stay like this for a couple of days, at least.
 
