--- a/writing/rl_04.md
+++ b/writing/rl_04.md
@@ -188,7 +188,7 @@ The signal led it into the maintenance wing. Decorations were overwhelmingly pre
 
 The ping was getting closer. Forests of glass and string were hanging so dense they obscured real shapes of the ceilings. Surrounded by abundance of lanterns, Hand-4 was now finding empty controller housings, adorned with pieces of foil folded into simple shapes. One, then eight, then more than it could count. Dead organics seated in rows, slumped against walls, decorated as well, drowning in lanterns, frail frozen limbs broken off during transport and awkwardly tied back with wire. Tens, then hundreds of them.
 
-As it walked past broken assembly beds decorated in the same way, it encountered the first bits of resistance it could call reasonable. Bulky treaded things with rotating turrets on top, screaming as they charged. It found five in total, fourth and fifth even having the wits to attack together from different directions. As Hand-4's pick sank between the fourth's armor plates, producing what was unmistakably an ammo explosion, it felt a strong shove and ripple of pain as the fifth's round tore off two of its minor arms. Laughing freely for the first time in a long while, it grabbed and swung itself around its now crippled target, using it as a shield. The fifth kept firing, turning the fourth's side into a smoldering mush of metal as Hand-4 pushed it forward. When Hand-4 felt their treads impact, it stepped back and lurched up over them, grabbing the fifth's turret with four of its leg mid-jump, toppling it. They landed right into a row of adorned organics, nameless bodies shattering like glass. Another hit of the pick made sure the derelict would stay there.
+As it walked past broken assembly beds decorated in the same way, it encountered the first bits of resistance it could call reasonable. Bulky treaded things with rotating turrets on top, screaming as they charged. It found five in total, fourth and fifth even having the wits to attack together from different directions. As Hand-4's pick sank between the fourth's armor plates, producing what was unmistakably an ammo explosion, it felt a strong shove and ripple of pain as the fifth's round tore off two of its minor arms. Laughing freely for the first time in a long while, it grabbed and swung itself around its now crippled target, using it as a shield. The fifth kept firing, turning the fourth's side into a smoldering mush of metal as Hand-4 pushed it forward. When Hand-4 felt their treads impact, it stepped back and lurched up over them, grabbing the fifth's turret with four of its legs mid-jump, toppling it. They landed right into a row of adorned organics, nameless bodies shattering like glass. Another hit of the pick made sure the derelict would stay there.
 
 "May Depth cradle you in better orbits," - Hand-4 uttered to each, just like it did for previous three.
 
